--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DISCORD_TOKEN=MTI0NTMyMDI1OTIxNzUyMjc1OA.G4bY7b.5EceRfTKY9VeaqvPq5xvPz6exMXAYvvl7tmnM0
-GEMINI_API_KEYS=AIzaSyCouZeHWzMB83Pv_Ewk01IhCKgqW4URlqs,AIzaSyCMkDpW3BwvN4xEBoyPie5kxuwV09c8icw,AIzaSyDUf2dh16wI6iZR8pYqRVzKByPETB_iBsg
+DISCORD_TOKEN=
+GEMINI_API_KEYS=
 AUTHORIZED_USERS=
 AUTHORIZED_CHANNELS=
